# PrjPerso_hr-attrition-mlops

./: .env.example  .env.local  .env.supabase  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy_hf_space.yml
data/processed/api_test/: X_test_sample.json  y_test_sample.json
docs/: API.md  DB.md  DEPLOYMENT.md  RUNBOOK.md  SECURITY.md  TESTING.md
models/: expected_features.json  final_model.joblib  model_card.json  pipeline.joblib
notebooks/: 01_ingestion_quality.ipynb  02_eda_insights.ipynb  03_features_preprocess.ipynb  04_modeling_baselines.ipynb  05_tuning_shap.ipynb
reports/: api_model_metrics.json  final_metrics.json  permutation_importance.csv  univariate_tests.csv
scripts/: db_apply_schema.py  db_run_checks.py  db_seed_employees.py  db_smoke_test.py  load_raw_to_postgres.py  train_export_pipeline.py
sql/: 02_clean_views.sql  03_join_and_stats.sql  04_central_clean.sql  05_group_stats.sql
sql/serving/: 01_schema.sql  02_seed_checks.sql
src/technova_attrition/: __init__.py  cleaning.py  config.py  data_io.py  db.py  eda.py  env.py  evaluation.py  explainability.py  features.py  modeling.py  preprocessing.py  serving_db_ops.py  stats_tests.py  tuning.py
src/technova_attrition/api/: deps.py  main.py  schemas.py  service.py  settings.py
src/technova_attrition/api/routers/: predict.py
tests/: test_data_io.py  test_features.py
tests/integration/: conftest.py  test_api_db_roundtrip.py
tests/unit/: test_api_security_validation.py  test_service_features_alignment.py
